--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
 // Navigation code here
+.navigation {
+  display: flex;
+  flex-direction: column;
+  max-width: 800px;
+  margin: 0 auto;
+
+  h1 {
+    text-align: center;
+    font-size: 4rem;
+    margin: 10px 0;
+  }
+
+  nav {
+    display: flex;
+    justify-content: center;
+
+    a {
+      font-size: 1.6rem;
+      text-decoration: none;
+      color: @nav-font;
+      margin: 10px 15px;
+    }
+  }
+
+  img {
+    border-radius: 5px;
+  }
+}
