--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,9 @@
 // Mixins Here
+.signup-btn(@bg-color; @fg-color;) {
+  width: 30%;
+  font-size: 1.8rem;
+  border-radius: 5px;
+  background-color: @bg-color;
+  color: @fg-color;
+  padding: 10px 20px;
+}
