Add hover style for button

--- a/css/index.css
+++ b/css/index.css
@@ -237,11 +237,20 @@ footer {
   margin-bottom: 26px;
 }
 .home .walk .walk-text .btn {
+  cursor: pointer;
   width: 30%;
   font-size: 1.8rem;
   border-radius: 5px;
   background-color: #22283A;
   color: white;
+  padding: 10px 20px;
+}
+.home .walk .walk-text .btn:hover {
+  width: 30%;
+  font-size: 1.8rem;
+  border-radius: 5px;
+  background-color: white;
+  color: #22283A;
   padding: 10px 20px;
 }
 .home .walk .walk-img {
