--- a/less/global.less
+++ b/less/global.less
@@ -8,13 +8,11 @@ html {
 }
 
 html, body {
-  font-family: 'Ubuntu', sans-serif;
-  color: @main-font-color;
+  .main-font();
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Russo One', sans-serif;
-  color: @header-font-color;
+  .header-font();
 }
 
 h2 {
@@ -31,8 +29,6 @@ p {
 }
 
 .container {
-  max-width: 800px;
-  width: 100%;
-  margin: 0 auto;  
+  .set-desktop-width();
 }
 
