--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,3 +7,19 @@
   color: @fg-color;
   padding: 10px 20px;
 }
+
+.set-desktop-width() {
+  max-width: 800px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.header-font() {
+  font-family: 'Russo One', sans-serif;
+  color: @header-font-color;
+}
+
+.main-font() {
+  font-family: 'Ubuntu', sans-serif;
+  color: @main-font-color;
+}
