--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,8 +2,7 @@
 .navigation {
   display: flex;
   flex-direction: column;
-  max-width: 800px;
-  margin: 0 auto;
+  .set-desktop-width();
 
   h1 {
     text-align: center;
