Finish adjustments for mobile styles

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,6 +9,9 @@
     width: 100%;
     background-color: @footer-background;
     border: 1px double #e0e0e0;
+    @media @phone {
+      border: none;
+    }
   }
 
   .navigation {
