--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,11 @@ p {
   background-color: #F6F6F6;
   border: 1px double #e0e0e0;
 }
+@media (max-width: 500px) {
+  .nav-area .outer-navbar {
+    border: none;
+  }
+}
 .nav-area .navigation {
   display: flex;
   flex-direction: column;
@@ -219,11 +224,28 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images {
+    flex-direction: column;
+    align-content: center;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 90%;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -241,8 +263,22 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column;
+    align-content: center;
+    padding: 20px 10px;
+    width: 95%;
+    margin: 20px auto 0;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -267,6 +303,13 @@ footer {
   color: #22283A;
   padding: 10px 20px;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
@@ -275,4 +318,11 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    order: -1;
+    width: 100%;
+    margin: 0 auto 20px;
+  }
 }
